Fix button styles on iOS Safari

--- a/src/styles.custom.css
+++ b/src/styles.custom.css
@@ -16,6 +16,7 @@ input {
   border: none;
   background: none;
   outline: none;
+  font-family: inherit;
   font-size: inherit;
 }
 
